--- a/releases/mongodb.yaml
+++ b/releases/mongodb.yaml
@@ -21,6 +21,6 @@ spec:
     persistence:
       enabled: false
     securityContext:
-      enabled: true
-      fsGroup: 0
-      runAsUser: 0
+      enabled: false
+      # fsGroup: 0
+      # runAsUser: 0
